data/forge_javadoc/1.7.10/processed/net_minecraft_client_stream_TwitchStream.md
# TwitchStream

## Class signature

```java
public class TwitchStream extends java.lang.Object implements BroadcastController.BroadcastListener , ChatController.ChatListener , IngestServerTester.IngestTestListener , IStream
```

## Constructors

- `public TwitchStream( Minecraft p_i1012_1_, java.lang.String p_i1012_2_)`

## Methods

- `public void func_152923_i()`
- `public void func_152935_j()`
- `protected void func_152942_I()`
- `public void func_152922_k()`
- `public boolean func_152936_l()`
- `public boolean func_152924_m()`
- `public boolean func_152934_n()`
- `public void func_152911_a( Metadata p_152911_1_, long p_152911_2_)`
- `public boolean func_152919_o()`
- `public void func_152931_p()`
- `public void func_152916_q()`
- `public void func_152933_r()`
- `public void func_152915_s()`
- `public void func_152930_t()`
- `public void func_152914_u()`
- `public void func_152900_a(ErrorCode p_152900_1_, AuthToken p_152900_2_)`
- `public void func_152897_a(ErrorCode p_152897_1_)`
- `public void func_152898_a(ErrorCode p_152898_1_, GameInfo[] p_152898_2_)`
- `public void func_152891_a( BroadcastController.BroadcastState p_152891_1_)`
- `public void func_152895_a()`
- `public void func_152894_a(StreamInfo p_152894_1_)`
- `public void func_152896_a(IngestList p_152896_1_)`
- `public void func_152893_b(ErrorCode p_152893_1_)`
- `public void func_152899_b()`
- `public void func_152901_c()`
- `public void func_152892_c(ErrorCode p_152892_1_)`
- `public void func_152907_a( IngestServerTester p_152907_1_, IngestServerTester.IngestTestState p_152907_2_)`
- `public static int func_152948_a(float p_152948_0_)`
- `public static int func_152946_b(float p_152946_0_)`
- `public static float func_152947_c(float p_152947_0_)`
- `public IngestServer[] func_152925_v()`
- `public void func_152909_x()`
- `public IngestServerTester func_152932_y()`
- `public boolean func_152908_z()`
- `public int func_152920_A()`
- `public void func_152903_a(ChatMessage[] p_152903_1_)`
- `public void func_152904_a(ChatUserInfo[] p_152904_1_, ChatUserInfo[] p_152904_2_, ChatUserInfo[] p_152904_3_)`
- `public void func_152906_d()`
- `public void func_152905_e()`
- `public void func_152902_f()`
- `public boolean func_152927_B()`
- `public java.lang.String func_152921_C()`
- `public ChatUserInfo func_152926_a(java.lang.String p_152926_1_)`
- `public void func_152917_b(java.lang.String p_152917_1_)`
- `public boolean func_152928_D()`
- `public ErrorCode func_152912_E()`
- `public boolean func_152913_F()`
- `public void func_152910_a(boolean p_152910_1_)`
- `public boolean func_152929_G()`
- `public IStream.AuthFailureReason func_152918_H()`